--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Suraj prasad</a>
+	      <a class="navbar-brand" href="index.html">Mr.Suraj prasad</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -278,7 +278,7 @@
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, canva &amp; Facebook ad</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>critical thinking, Leadership,problem-solving , navigation,networking,contain writing &amp;</span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Traveling,book riding,yoga,music,Learning new knowledge Teaching</span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Traveling,book reading,yoga,music,Learning new knowledge Teaching</span></li>
 									
 								</ul>
 							</div>
@@ -642,7 +642,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+	We will fail when we fail to try;<script>document.write(new Date().getFullYear());</script> All dreams are within reach. All you have to do is keep moving towards them <i class="icon-heart color-danger" aria-hidden="true"></i> thank <a href="https://colorlib.com" target="_blank"> you </a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
